--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Hello World</title>
+  <title>오늘 저녁 뭐 먹지?</title>
   <link href='/style.css' rel='stylesheet'>
 </head>
 <body>
-  <h1>Hello, world!</h1>
   <button id="theme-toggle">Toggle Dark Mode</button>
-  <button onclick="console.log('hello');">Press me</button>
+  <h1>오늘 저녁 뭐 먹지?</h1>
+  <button id="recommend-btn">저녁 메뉴 추천받기</button>
+  <h2 id="menu-display"></h2>
   <script defer type="text/javascript" src="/main.js"></script>
 </body>
 </html>
