feat: Display image for recommended menu

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <button id="theme-toggle">Toggle Dark Mode</button>
   <h1>오늘 저녁 뭐 먹지?</h1>
   <button id="recommend-btn">저녁 메뉴 추천받기</button>
+  <img id="menu-image" src="" alt="추천 메뉴 이미지" style="display: none;">
   <h2 id="menu-display"></h2>
   <script defer type="text/javascript" src="/main.js"></script>
 </body>
