--- a/index.html
+++ b/index.html
@@ -12,6 +12,23 @@
   <button id="recommend-btn">저녁 메뉴 추천받기</button>
   <img id="menu-image" src="" alt="추천 메뉴 이미지" style="display: none;">
   <h2 id="menu-display"></h2>
+
+  <section class="contact-form-section">
+    <h2>제휴 문의</h2>
+    <form action="https://formspree.io/f/mpqdgnrw" method="POST">
+      <label for="name">이름:</label>
+      <input type="text" id="name" name="name" required>
+
+      <label for="email">이메일:</label>
+      <input type="email" id="email" name="email" required>
+
+      <label for="message">메시지:</label>
+      <textarea id="message" name="message" rows="5" required></textarea>
+
+      <button type="submit">문의하기</button>
+    </form>
+  </section>
+
   <script defer type="text/javascript" src="/main.js"></script>
 </body>
 </html>
