--- a/index.html
+++ b/index.html
@@ -3,34 +3,68 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>오늘 저녁 뭐 먹지?</title>
+  <title>동물상 테스트</title>
   <link href='/style.css' rel='stylesheet'>
 </head>
 <body>
-  <button id="theme-toggle">Toggle Dark Mode</button>
-  <h1>오늘 저녁 뭐 먹지?</h1>
-  <button id="recommend-btn">저녁 메뉴 추천받기</button>
-  <img id="menu-image" src="" alt="추천 메뉴 이미지" style="display: none;">
-  <h2 id="menu-display"></h2>
+  <div>Teachable Machine Image Model</div>
+  <button type="button" onclick="init()">Start</button>
+  <div id="webcam-container"></div>
+  <div id="label-container"></div>
+  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest/dist/tf.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@latest/dist/teachablemachine-image.min.js"></script>
+  <script type="text/javascript">
+      // More API functions here:
+      // https://github.com/googlecreativelab/teachablemachine-community/tree/master/libraries/image
 
-  <section class="contact-form-section">
-    <h2>제휴 문의</h2>
-    <form action="https://formspree.io/f/mpqdgnrw" method="POST">
-      <label for="name">이름:</label>
-      <input type="text" id="name" name="name" required>
+      // the link to your model provided by Teachable Machine export panel
+      const URL = "https://teachablemachine.withgoogle.com/models/UypRWo4Ql/";
 
-      <label for="email">이메일:</label>
-      <input type="email" id="email" name="email" required>
+      let model, webcam, labelContainer, maxPredictions;
 
-      <label for="message">메시지:</label>
-      <textarea id="message" name="message" rows="5" required></textarea>
+      // Load the image model and setup the webcam
+      async function init() {
+          const modelURL = URL + "model.json";
+          const metadataURL = URL + "metadata.json";
 
-      <button type="submit">문의하기</button>
-    </form>
-  </section>
+          // load the model and metadata
+          // Refer to tmImage.loadFromFiles() in the API to support files from a file picker
+          // or files from your local hard drive
+          // Note: the pose library adds "tmImage" object to your window (window.tmImage)
+          model = await tmImage.load(modelURL, metadataURL);
+          maxPredictions = model.getTotalClasses();
 
+          // Convenience function to setup a webcam
+          const flip = true; // whether to flip the webcam
+          webcam = new tmImage.Webcam(200, 200, flip); // width, height, flip
+          await webcam.setup(); // request access to the webcam
+          await webcam.play();
+          window.requestAnimationFrame(loop);
 
+          // append elements to the DOM
+          document.getElementById("webcam-container").appendChild(webcam.canvas);
+          labelContainer = document.getElementById("label-container");
+          for (let i = 0; i < maxPredictions; i++) { // and class labels
+              labelContainer.appendChild(document.createElement("div"));
+          }
+      }
 
-  <script defer type="text/javascript" src="/main.js"></script>
+      async function loop() {
+          webcam.update(); // update the webcam frame
+          await predict();
+          window.requestAnimationFrame(loop);
+      }
+
+      // run the webcam image through the image model
+      async function predict() {
+          // predict can take in an image, video or canvas html element
+          const prediction = await model.predict(webcam.canvas);
+          for (let i = 0; i < maxPredictions; i++) {
+              const classPrediction =
+                  prediction[i].className + ": " + prediction[i].probability.toFixed(2);
+              labelContainer.childNodes[i].innerHTML = classPrediction;
+          }
+      }
+  </script>
 </body>
 </html>
