--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 </head>
 <body>
   <div>Teachable Machine Image Model</div>
-  <button type="button" onclick="init()">Start</button>
-  <div id="webcam-container"></div>
+  <input type="file" id="image-upload" accept="image/*" />
+  <div id="image-container">
+    <img id="uploaded-image" width="200" height="200" />
+  </div>
   <div id="label-container"></div>
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest/dist/tf.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@latest/dist/teachablemachine-image.min.js"></script>
@@ -20,51 +22,49 @@
       // the link to your model provided by Teachable Machine export panel
       const URL = "https://teachablemachine.withgoogle.com/models/UypRWo4Ql/";
 
-      let model, webcam, labelContainer, maxPredictions;
+      let model, labelContainer, maxPredictions;
 
-      // Load the image model and setup the webcam
+      // Load the image model
       async function init() {
           const modelURL = URL + "model.json";
           const metadataURL = URL + "metadata.json";
 
           // load the model and metadata
-          // Refer to tmImage.loadFromFiles() in the API to support files from a file picker
-          // or files from your local hard drive
-          // Note: the pose library adds "tmImage" object to your window (window.tmImage)
           model = await tmImage.load(modelURL, metadataURL);
           maxPredictions = model.getTotalClasses();
 
-          // Convenience function to setup a webcam
-          const flip = true; // whether to flip the webcam
-          webcam = new tmImage.Webcam(200, 200, flip); // width, height, flip
-          await webcam.setup(); // request access to the webcam
-          await webcam.play();
-          window.requestAnimationFrame(loop);
-
-          // append elements to the DOM
-          document.getElementById("webcam-container").appendChild(webcam.canvas);
           labelContainer = document.getElementById("label-container");
           for (let i = 0; i < maxPredictions; i++) { // and class labels
               labelContainer.appendChild(document.createElement("div"));
           }
+
+          const imageUpload = document.getElementById("image-upload");
+          imageUpload.addEventListener("change", async (e) => {
+              const file = e.target.files[0];
+              const reader = new FileReader();
+              reader.onload = async (event) => {
+                  const image = document.getElementById("uploaded-image");
+                  image.src = event.target.result;
+                  image.onload = async () => {
+                      await predict(image);
+                  }
+              }
+              reader.readAsDataURL(file);
+          });
       }
 
-      async function loop() {
-          webcam.update(); // update the webcam frame
-          await predict();
-          window.requestAnimationFrame(loop);
-      }
-
-      // run the webcam image through the image model
-      async function predict() {
+      // run the image through the image model
+      async function predict(image) {
           // predict can take in an image, video or canvas html element
-          const prediction = await model.predict(webcam.canvas);
+          const prediction = await model.predict(image);
           for (let i = 0; i < maxPredictions; i++) {
               const classPrediction =
                   prediction[i].className + ": " + prediction[i].probability.toFixed(2);
               labelContainer.childNodes[i].innerHTML = classPrediction;
           }
       }
+
+      init();
   </script>
 </body>
 </html>
